--- a/src/components/RoleManagement.css
+++ b/src/components/RoleManagement.css
@@ -16,7 +16,7 @@
 
 .settings-header h2 {
   font-size: 2rem;
-  margin-bottom: 0.5rem;
+  margin: 0 0 0 0;
   color: #2d3748;
   font-weight: 700;
 }
